# vimstoat

./: Cargo.toml  README.md  ROADMAP.md  TODO.md
.cargo-husky/hooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: aur.yml  pages.yml  pr-alert.yml  rust.yml
docs/vimstoat/: book.toml
docs/vimstoat/src/: keybinds.md
src/: action.rs  app.rs  cache.rs  input.rs  main.rs  ui.rs
src/api/: auth.rs
