[package]
name = "vimstoat"
version = "0.1.0"
edition = "2024"

[dependencies]
keyring-lib = { version = "1.0.3", features = ["tokio"] }
ratatui = "0.30.2"
stoat-rs = "0.2.5"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
